--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div style="display:grid;grid-template-columns:1fr;gap:16px;margin-top:12px">
         <div style="font-size:15px;color:var(--muted)">
           I’m a nature photographer based in India. I hunt light, patience and moments that tell a story. Available for prints, commissions and travel assignments.<br>
-          Contact: <a href="mailto:keval@example.com" aria-label="Email Keval Kotadia">keval@example.com</a>
+          Contact: <a href="mailto:kevalphotos03@gmail.com" aria-label="Email Keval Kotadia">kevalphotos03@gmail.com</a>
         </div>
       </div>
     </section>
