--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Keval Kotadia — Nature Photography</title>
   <meta name="description" content="Explore the serene nature photography of Keval Kotadia — landscapes, wildlife & more." />
-  <link rel="icon" type="image/png" href="images/favicon.png" />
+  <link rel="icon" type="image/png" href="../gallery/favicon.png" />
   
   <!-- Open Graph SEO -->
   <meta property="og:title" content="Keval Kotadia — Nature Photography" />
@@ -129,10 +129,10 @@
       <div class="hero-main">
         <p class="headline">Capturing the quiet moments in nature.</p>
         <p class="sub">Welcome — I’m Keval. I specialize in landscape and nature photography. Browse the gallery and follow me on Instagram for my latest work.</p>
-        <a class="cta" href="gallery/" aria-label="View Gallery">View Gallery</a>
+        <a class="cta" href="../gallery/" aria-label="View Gallery">View Gallery</a>
       </div>
       <div class="hero-image" aria-hidden="true">
-        <img src="gallery/background.jpg" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
+        <img src="../gallery/background.jpg" alt="Featured photo" style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px">
       </div>
     </section>
 
