--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,382 +1,133 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Keval Kotadia — Nature Photography Gallery</title>
-  <meta name="description" content="Explore the serene nature photography of Keval Kotadia — gallery of landscapes, wildlife & more." />
-  <link rel="icon" href="../gallery/favicon.png" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Gallery — Keval Kotadia</title>
+  <link rel="icon" href="../images/favicon.png" />
   <style>
-    :root {
-      --bg: #0f0f10;
-      --card: #0f1720;
-      --muted: #a7b0b8;
-      --accent: #f59e0b;
-      --white: #ffffff;
-      --max-width: 1100px;
-      --radius: 14px;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-    }
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      margin: 0;
-      background: linear-gradient(180deg, #071021 0%, #081428 100%);
-      color: var(--white);
-      -webkit-font-smoothing: antialiased;
-    }
-    .container {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 28px 20px 40px;
-    }
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-      margin-bottom: 20px;
-    }
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-    .logo {
-      width: 48px;
-      height: 48px;
-      border-radius: 10px;
-      background: linear-gradient(135deg, #111827, #0ea5a9);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      font-size: 20px;
-      user-select: none;
-      color: white;
-    }
-    .brand h1 {
-      font-size: 18px;
-      margin: 0;
-    }
-    nav a {
-      color: var(--white);
-      text-decoration: none;
-      margin-left: 16px;
-      font-size: 14px;
-      transition: color 0.2s ease;
-    }
-    nav a:hover {
-      color: var(--accent);
-    }
-    h2 {
-      margin-top: 0;
-      margin-bottom: 12px;
-      font-weight: 600;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-      gap: 18px;
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    .card {
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0.02), rgba(255, 255, 255, 0.01));
-      border-radius: var(--radius);
-      overflow: hidden;
-      position: relative;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-    }
-    .card img {
-      width: 100%;
-      height: 260px;
-      object-fit: cover;
-      display: block;
-      border-radius: var(--radius);
-      transition: filter 0.3s ease;
-      filter: brightness(0.95);
-    }
-    .card img:hover {
-      filter: brightness(1);
-    }
-    .meta {
-      padding: 12px;
-    }
-    .meta h3 {
-      margin: 0 0 6px;
-      font-size: 16px;
-    }
-    .meta p {
-      margin: 0;
-      color: var(--muted);
-      font-size: 13px;
-    }
-    /* Lightbox styles */
-    .lightbox {
-      position: fixed;
-      inset: 0;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      background: rgba(0, 0, 0, 0.9);
-      z-index: 1500;
-      overflow: hidden;
-      padding: 20px;
-      user-select: none;
-    }
-    .lightbox.open {
-      display: flex;
-    }
-    .lightbox img {
-      max-width: 95%;
-      max-height: 85%;
-      border-radius: 8px;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
-      opacity: 0;
-      transition: opacity 0.4s ease;
-      will-change: opacity;
-    }
-    .lightbox img.visible {
-      opacity: 1;
-    }
-    .lb-close, .lb-download {
-      position: absolute;
-      top: 20px;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 8px;
-      padding: 10px 14px;
-      cursor: pointer;
-      color: white;
-      font-size: 18px;
-      user-select: none;
-      transition: background-color 0.2s ease;
-      font-weight: bold;
-      text-decoration: none;
-    }
-    .lb-close:hover, .lb-download:hover {
-      background: var(--accent);
-      color: #050505;
-    }
-    .lb-close {
-      right: 20px;
-    }
-    .lb-download {
-      right: 70px;
-    }
-    /* Responsive tweaks */
-    @media (min-width: 900px) {
-      .card img {
-        height: 200px;
-      }
-    }
+    :root{--bg:#071021;--card:#0f1720;--muted:#a7b0b8;--accent:#f59e0b;--white:#fff}
+    *{box-sizing:border-box} body{margin:0;background:linear-gradient(180deg,#071021,#081428);color:var(--white);font-family:Inter,system-ui,Arial}
+    .container{max-width:1100px;margin:0 auto;padding:20px}
+    header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:18px}
+    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,#111827,#0ea5a9);display:flex;align-items:center;justify-content:center;font-weight:700}
+    nav a{color:var(--white);text-decoration:none;margin-left:12px}
+    h2{margin:0 0 12px}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px}
+    .card{background:rgba(255,255,255,0.02);border-radius:12px;overflow:hidden;cursor:pointer}
+    .card img{width:100%;height:220px;object-fit:cover;display:block}
+    .meta{padding:10px}
+    .meta h3{margin:0 0 6px;font-size:16px}
+    .meta p{margin:0;color:var(--muted);font-size:13px}
+    /* lightbox */
+    .lightbox{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,0.9);z-index:9999;padding:20px}
+    .lightbox.open{display:flex}
+    .lightbox img{max-width:95%;max-height:85%;border-radius:8px}
+    .lb-close{position:absolute;top:20px;right:20px;background:rgba(0,0,0,0.5);padding:8px;border-radius:8px;cursor:pointer}
+    .download-btn{position:absolute;top:20px;right:80px;background:var(--accent);color:#050505;padding:8px 10px;border-radius:8px;text-decoration:none;font-weight:600}
+    footer{margin:40px 0 10px;color:var(--muted);text-align:center}
+    @media(min-width:900px){.card img{height:200px}}
   </style>
 </head>
 <body>
-  <div class="container" role="main">
+  <div class="container">
     <header>
-      <div class="brand">
+      <div style="display:flex;align-items:center;gap:12px">
         <div class="logo">KK</div>
         <div>
-          <h1>Keval Kotadia</h1>
-          <p>Nature & Landscape Photographer</p>
+          <h1 style="margin:0;font-size:18px">Keval Kotadia</h1>
+          <div style="color:var(--muted);font-size:13px">Nature & Landscape</div>
         </div>
       </div>
       <nav>
         <a href="../">Home</a>
-        <a href="../gallery/">Gallery</a>
-        <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a href="../admin/">Admin</a>
+        <a href="https://www.instagram.com/keval.kotadia" target="_blank" rel="noopener noreferrer">Instagram</a>
       </nav>
     </header>
 
-    <section aria-label="Photography Gallery" style="margin-top:20px;">
+    <main>
       <h2>Gallery</h2>
-      <ul id="galleryGrid" class="gallery" aria-live="polite" role="list"></ul>
-    </section>
+      <div id="grid" class="grid" aria-live="polite"></div>
+    </main>
 
-    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true" aria-label="Image viewer">
-      <a href="#" id="lbDownload" class="lb-download" title="Download photo" download>⬇</a>
-      <div class="lb-close" id="lbClose" title="Close viewer" role="button" tabindex="0">✕</div>
-      <img id="lbImage" src="" alt="Enlarged photo" />
+    <div id="lightbox" class="lightbox" role="dialog" aria-modal="true">
+      <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+      <a id="download" class="download-btn" download>⬇ Download</a>
+      <img id="lbImg" src="" alt=""/>
     </div>
+
+    <footer>© <span id="year"></span> Keval Kotadia</footer>
   </div>
 
-  <script>
-    // Set current year in footer if you have footer year span somewhere
-    // document.getElementById('year').textContent = new Date().getFullYear();
+  <!-- Firebase SDKs using v9 compat (modular) via CDN -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+    import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+    import { getStorage, ref as storageRef, getDownloadURL } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-storage.js";
+    // import config
+    import { firebaseConfig } from "../firebase-config.js";
 
-    let galleryData = [];
-    let currentIndex = 0;
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
+
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    const grid = document.getElementById('grid');
+    const lb = document.getElementById('lightbox');
+    const lbImg = document.getElementById('lbImg');
+    const lbClose = document.getElementById('lbClose');
+    const downloadBtn = document.getElementById('download');
 
     async function loadGallery() {
+      grid.innerHTML = '';
       try {
-        const res = await fetch('../gallery/gallery.json', { cache: 'no-cache' });
-        if (!res.ok) throw new Error('gallery.json not found');
-        galleryData = await res.json();
+        // Fetch ordered by createdAt if you store that field; otherwise simple getDocs
+        const q = query(collection(db, 'gallery'), orderBy('createdAt', 'desc'));
+        const snap = await getDocs(q);
+        const items = [];
+        snap.forEach(doc => {
+          const data = doc.data();
+          items.push({ id: doc.id, ...data });
+        });
 
-        const grid = document.getElementById('galleryGrid');
-        grid.innerHTML = ''; // clear old
+        if (items.length === 0) {
+          grid.innerHTML = '<div style="color:var(--muted)">No photos yet.</div>';
+          return;
+        }
 
-        galleryData.forEach((item, index) => {
-          const card = document.createElement('li');
+        items.forEach(item => {
+          const card = document.createElement('div');
           card.className = 'card';
-          card.setAttribute('tabindex', '0');
-          card.setAttribute('role', 'listitem');
-
           const img = document.createElement('img');
+          img.alt = item.title || '';
+          img.src = item.src; // src stored is public storage URL
           img.loading = 'lazy';
-          img.decoding = 'async';
-          img.alt = item.alt || item.title || 'Photo by Keval Kotadia';
-          img.src = item.src;
-          // Responsive srcset & WebP fallback example:
-          // (Assuming you create optimized webp images alongside jpgs in images/ folder)
-          // You can update this or remove if not applicable:
-          /*
-          img.srcset = `
-            ${item.src.replace('.jpg', '.webp')} 1x,
-            ${item.src.replace('.jpg', '@2x.webp')} 2x
-          `;
-          */
-          img.addEventListener('click', () => openLightbox(index));
-          img.addEventListener('keydown', (e) => {
-            if (e.key === 'Enter' || e.key === ' ') {
-              e.preventDefault();
-              openLightbox(index);
-            }
-          });
-
+          img.addEventListener('click', () => openLightbox(item));
           const meta = document.createElement('div');
           meta.className = 'meta';
-
-          const h3 = document.createElement('h3');
-          h3.textContent = item.title || '';
-          const p = document.createElement('p');
-          p.textContent = item.year || '';
-
-          meta.appendChild(h3);
-          meta.appendChild(p);
-
-          card.appendChild(img);
-          card.appendChild(meta);
-
+          meta.innerHTML = `<h3>${item.title || ''}</h3><p>${item.year || ''}</p>`;
+          card.appendChild(img); card.appendChild(meta);
           grid.appendChild(card);
         });
+
       } catch (err) {
-        console.error('Error loading gallery:', err);
-        const grid = document.getElementById('galleryGrid');
-        grid.innerHTML = '<p style="color:var(--muted)">Gallery not available.</p>';
+        console.error(err);
+        grid.innerHTML = '<div style="color:var(--muted)">Gallery not available.</div>';
       }
     }
 
-    // Lightbox elements
-    const lb = document.getElementById('lightbox');
-    const lbImg = document.getElementById('lbImage');
-    const lbClose = document.getElementById('lbClose');
-    const lbDownload = document.getElementById('lbDownload');
-
-    function openLightbox(index) {
-      currentIndex = index;
-      const item = galleryData[currentIndex];
-      if (!item) return;
-
-      lbImg.classList.remove('visible'); // hide old image for fade
-      setTimeout(() => {
-        lbImg.src = item.src;
-        lbImg.alt = item.alt || item.title || '';
-        lbDownload.href = item.src;
-        lbImg.classList.add('visible'); // fade in
-      }, 100);
-
+    function openLightbox(item) {
+      lbImg.src = item.src;
+      lbImg.alt = item.title || '';
+      downloadBtn.href = item.src;
+      downloadBtn.setAttribute('download', item.title || 'photo');
       lb.classList.add('open');
-      document.body.style.overflow = 'hidden'; // prevent scroll
-
-      // Focus close button for accessibility
-      lbClose.focus();
     }
+    lbClose.addEventListener('click', ()=> lb.classList.remove('open'));
+    lb.addEventListener('click', (e)=> { if (e.target === lb) lb.classList.remove('open'); });
 
-    function closeLightbox() {
-      lb.classList.remove('open');
-      lbImg.src = '';
-      document.body.style.overflow = '';
-    }
-
-    lbClose.addEventListener('click', closeLightbox);
-    lbClose.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        closeLightbox();
-      }
-    });
-
-    lb.addEventListener('click', (e) => {
-      if (e.target === lb) {
-        closeLightbox();
-      }
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (!lb.classList.contains('open')) return;
-
-      if (e.key === 'Escape') {
-        closeLightbox();
-      } else if (e.key === 'ArrowRight') {
-        nextPhoto();
-      } else if (e.key === 'ArrowLeft') {
-        prevPhoto();
-      }
-    });
-
-    // Swipe support
-    let touchStartX = null;
-    let touchEndX = null;
-
-    lb.addEventListener('touchstart', (e) => {
-      touchStartX = e.changedTouches[0].screenX;
-    });
-
-    lb.addEventListener('touchend', (e) => {
-      touchEndX = e.changedTouches[0].screenX;
-      handleGesture();
-    });
-
-    function handleGesture() {
-      if (!touchStartX || !touchEndX) return;
-      const diff = touchStartX - touchEndX;
-      const threshold = 40; // min px for swipe
-      if (Math.abs(diff) > threshold) {
-        if (diff > 0) nextPhoto();
-        else prevPhoto();
-      }
-      touchStartX = null;
-      touchEndX = null;
-    }
-
-    function nextPhoto() {
-      if (currentIndex < galleryData.length - 1) {
-        currentIndex++;
-      } else {
-        currentIndex = 0; // loop to first
-      }
-      openLightbox(currentIndex);
-    }
-
-    function prevPhoto() {
-      if (currentIndex > 0) {
-        currentIndex--;
-      } else {
-        currentIndex = galleryData.length - 1; // loop to last
-      }
-      openLightbox(currentIndex);
-    }
-
-    // Load gallery on page load
     loadGallery();
   </script>
 </body>
