--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Gallery — Keval Kotadia</title>
-  <link rel="icon" href="../images/favicon.png" />
+  <link rel="icon" href="../gallery/favicon.png" />
   <style>
     :root{--bg:#071021;--card:#0f1720;--muted:#a7b0b8;--accent:#f59e0b;--white:#fff}
     *{box-sizing:border-box} body{margin:0;background:linear-gradient(180deg,#071021,#081428);color:var(--white);font-family:Inter,system-ui,Arial}
